tests/ui/rfcs/rfc-2632-const-trait-impl/impl-tilde-const-trait.rs
#![feature(const_trait_impl)]

struct S;
trait T {}

impl ~const T for S {}
//~^ ERROR expected a trait, found type

fn main() {}
